# isedit

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  examples.html  function_testing.ipynb  genindex.html  index.html  install.json  installation.html  isedit.html  isedit.json  modindex.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build.yml  codeql.yml
_sources/: examples.md.txt  index.rst.txt  modindex.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/src/: index.rst.txt
_sources/autoapi/src/Base/: index.rst.txt
_sources/autoapi/test_all/: index.rst.txt
autoapi/: index.html
autoapi/src/: index.html
autoapi/src/Base/: index.html
autoapi/test_all/: index.html
docs/: conf.py  examples.md  index.rst  installation.md  isedit.rst
isedit/: Base.py  VexConversion.py  __init__.py  _version.py  ipyscore.py  package-lock.json
isedit/labextension/: package.json
isedit/nbextension/: extension.js  index.js
isedit/tests/: test_all.py
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: extension.js  index.js  ipyscore.js  labplugin.js
src/: Base.py
src/tests/: test_all.py
