[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "jupyter_packaging~=0.7.9", 
    "jupyterlab~=3.0", 
    "setuptools>=40.8.0", 
    "wheel"
]
build-backend="setuptools.build_meta"

[project]
name = "isedit"
authors = [{name = "Sadi Gulcelik", email = "sg3790@columbia.edu"}]
description="Interactive Score Editor"
readme = "README.md"
version = "0.3.0"
requires-python = ">=3.7"

dependencies = []

classifiers = [
    "Programming Language :: Python :: 3.10",
]


[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/sadigulcelik/isedit"

[project.optional-dependencies]
develop = [
    "black>=22",
    "bump2version>=1.0.0",
    "check-manifest",
    "flake8>=3.7.8",
    "flake8-black>=0.2.1",
    "flake8-pyproject",
    "mypy",
    "pytest>=4.3.0",
    "pytest-cov>=2.6.1",
    "twine",
    "wheel",
    "numpy",
    "pyaudio",
    "IPython",
    "config",
    "midiutil",
    "pygame", 
    "deprecation",
    "ipywidgets",
    "jupyter_packaging",
    "jupyter",
    "jupyterlab"
    
]

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.check-manifest]
ignore = [
]

[tool.flake8]
ignore = ['E203', 'W503']
max-line-length=120
exclude=[
    'isedit/tests/test_all.py',
    'function_testing.ipynb'
]
per-file-ignores= [
]


[tool.isort]
line_length = 120
known_first_party = 'pydantic'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
python_version = '3.10'
ignore_missing_imports = true
# show_error_codes = true
# follow_imports = 'silent'
# strict_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true
# warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# disallow_untyped_calls = true

[tool.pytest.ini_options]
testpaths = 'isedit/tests'